1.002 2024-06-06
  [Changes]
    * Include guard name is changed from SPVM__SOCKET_UTIL_H to SPVM_SOCKET_UTIL_H

1.001  2023-05-03
  [New Features]
    * The version string can be got.
0.03 2023-04-04
  [License Change]
    * The license is changed to MIT License.
  [Prerequirement Change]
    * SPVM 0.9701 is required.
0.02 2022-12-12
  [Document Changes]
    * Added the following doc.

      =head1 Library Dependencies
      
      On Windows, the C<wsock32> and C<ws2_32> libraries are needed.
      if ($^O eq 'MSWin32') {
        $config->add_libs('wsock32', 'ws2_32');
      }
  [Testing Bug Fix]
    * Fixed the testing bug on Windows.
  
  [Test Improvement]
    * Added github actions.
0.01 2022-12-04
  [Changes]
    * First release.