@@ -6,11 +6,20 @@
 
 #include "spvm_native.h"
 
+// This macro will be removed if Sys class does not use it.
+#define SPVM_SOCKET_UTIL_DEFINE_SOCKADDR_UN
+
 #ifdef _WIN32
   #include <ws2tcpip.h>
   #include <winsock2.h>
   #include <io.h>
   #include <winerror.h>
+  
+  #define UNIX_PATH_MAX 108
+  struct sockaddr_un {
+    ADDRESS_FAMILY sun_family;
+    char sun_path[UNIX_PATH_MAX];
+  };
 #else
   #include <unistd.h>
   #include <sys/types.h>
@@ -19,6 +28,7 @@
   #include <netinet/ip.h>
   #include <netdb.h>
   #include <arpa/inet.h>
+  #include <sys/un.h>
 #endif
 
 #include <errno.h>
