@@ -1,7 +1,11 @@
 1.002 2024-06-06
   [Changes]
     * Include guard name is changed from SPVM__SOCKET_UTIL_H to SPVM_SOCKET_UTIL_H
-
+  [New Features]
+    * Support the following structure for UNIX domain sockets.
+    
+      struct sockaddr_un
+    
 1.001  2023-05-03
   [New Features]
     * The version string can be got.
